docs: comprehensive documentation update for multi-service support
- Update README.md with Services section, multi-service examples for Discord/Slack
- Add Slack webhook setup instructions alongside Discord
- Update AGENT.md with service selection patterns and format differences
- Add .env.example support for both DISCORD_WEBHOOK_URL and SLACK_WEBHOOK_URL
- Document service-native rich formatting (Discord embeds, Slack blocks/attachments)
- Include comprehensive examples for both services and color references

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-# Discord webhook URL for notify_me.sh
-# Copy this file to ".env" and replace with your real webhook URL.
+# Webhook URLs for notify_me.sh
+# Copy this file to ".env" and replace with your real webhook URLs.
+# Configure one or both services as needed.
+
+# Discord webhook URL
 DISCORD_WEBHOOK_URL="https://discord.com/api/webhooks/REPLACE_ME/REPLACE_ME"
+
+# Slack webhook URL (incoming webhook)
+SLACK_WEBHOOK_URL="https://hooks.slack.com/services/REPLACE/ME/REPLACE"
